// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Monthly donation renders correctly 1`] = `
.c4 {
  font-family: 'Anton',Impact,sans-serif;
  font-weight: 400;
  text-transform: uppercase;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-size: 1.5rem;
  line-height: 1.5rem;
}

.c4 {
  font-size: 4rem;
  line-height: normal;
  font-family: 'Anton',Impact,sans-serif;
  font-weight: normal;
  color: #FFFFFF;
}

.c4 span {
  font-size: inherit;
  line-height: inherit;
}

.c5 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c5 {
  font-size: 1.25rem;
  line-height: normal;
  color: #FFFFFF;
}

.c5 span {
  font-size: inherit;
  line-height: inherit;
}

.c10 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c10 {
  color: #FFFFFF;
}

.c10 span {
  font-size: inherit;
  line-height: inherit;
}

.c18 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c18 {
  font-size: 1rem;
  line-height: normal;
  font-weight: 500;
  color: #FFFFFF;
}

.c18 span {
  font-size: inherit;
  line-height: inherit;
}

.c22 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c22 span {
  font-size: inherit;
  line-height: inherit;
}

.c20 {
  width: 100%;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  color: #000000;
}

.c23 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c24 {
  position: relative;
  font-size: 1.25rem;
}

.c26 {
  position: relative;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c27 {
  position: relative;
  box-sizing: border-box;
  width: 100%;
  height: 48px;
  padding: 1rem 2.4rem 1rem 1.5rem;
  padding-left: calc(1.5rem + (1 * 0.5rem));
  background-color: #F4F3F5;
  border: 1px solid;
  border-color: #969598;
  box-shadow: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #000000;
  border-radius: 0.5rem;
  font-size: inherit;
  z-index: 2;
  font-family: inherit;
}

.c27:focus {
  border: 1px solid #666;
}

.c25 {
  position: absolute;
  left: 0;
  top: 0;
  z-index: 3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: calc(1.5rem + (1 * 0.5rem));
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #222222;
  font-weight: 700;
  font-size: inherit;
  margin-left: 2px;
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: auto;
  padding: 0rem 0 2rem;
  background-color: #F4F3F5;
}

.c1 {
  position: relative;
  text-align: center;
  padding: 2rem 1rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: block;
  width: 100%;
}

.c2 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  padding-bottom: 2rem;
}

.c3 {
  position: relative;
  text-align: left;
}

.c6 {
  position: relative;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c7 {
  position: relative;
  width: 100%;
  background-color: #FFFFFF;
  box-shadow: 0px 0px 16px rgba(0,0,0,0.15);
  border-radius: 0.5rem;
  margin-top: 1rem;
}

.c7 h3 {
  margin-top: 1rem;
}

.c7 input {
  max-width: 100%;
  margin: 0;
}

.c7 input[type='submit'] {
  margin: 2rem 0;
}

.c8 {
  color: #000000;
  padding: 0 1rem 1rem;
  margin: 0;
  border: none;
}

.c8 input[type='submit'] {
  margin-bottom: 0;
}

.c9 {
  margin: 0;
  padding: 2rem 0.5rem 0 0.5rem;
  display: block;
  width: 100%;
}

.c11 {
  display: block;
  text-align: left;
  font-size: 1rem;
  font-weight: 700;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c19 {
  margin-bottom: 0.5rem;
}

.c21 {
  position: relative;
  -webkit-flex-basis: 50%;
  -ms-flex-preferred-size: 50%;
  flex-basis: 50%;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  font-weight: 400;
  display: block;
}

.c21 span {
  position: absolute;
  font-size: 20px;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  left: 0px;
  font-weight: 500;
  padding: 0px 15px;
  z-index: 3;
}

.c21 input {
  height: 48px;
  border: 1px solid #969598;
  background: #F4F3F5;
  border-radius: 0.5rem;
  padding: 0.5rem 1rem 0.5rem 2rem;
}

.c21 input:focus {
  outline: none;
  border: 1px solid #969598;
}

.c28 {
  line-height: 1.5;
  margin-top: 2rem;
}

.c29 {
  width: 100%;
  margin: 0.5rem 0 0.5rem;
  color: #FFFFFF;
  font-size: 1rem;
  font-weight: bold;
  cursor: pointer;
  min-height: 48px;
  background: #E52630;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 0.5rem;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c29:active,
.c29:focus,
.c29:hover {
  outline: none;
  background-color: #961D35;
}

.c16 {
  width: 50%;
  height: 48px;
  z-index: 1;
  display: block;
  position: absolute;
  -webkit-transition: left 0.15s ease-out;
  transition: left 0.15s ease-out;
  background-color: #E52630;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 1rem 0;
}

.c13 {
  width: 100%;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin: 0.5rem 0;
  overflow: hidden;
  border-radius: 0.5rem;
  border: 1px solid #969598;
  background: #FFFFFF;
}

.c13 .give-monthly:checked ~ .c15 {
  left: calc(50%);
}

.c13 input {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c14 {
  font-size: 1rem;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: bold;
  min-height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-basis: 50%;
  -ms-flex-preferred-size: 50%;
  flex-basis: 50%;
  border: none;
  -webkit-transition: color 0.15s ease-out;
  transition: color 0.15s ease-out;
  z-index: 2;
  cursor: pointer;
  border-radius: 2rem;
  color: #000000;
}

.c14:active:focus {
  box-shadow: none;
}

.c14:focus {
  border: none;
  outline: none;
  box-shadow: inset 0 0 0 4px #E52630;
}

@media (min-width:740px) {
  .c4 {
    font-size: 1.875rem;
    line-height: 1.875rem;
  }
}

@media (min-width:1024px) {
  .c4 {
    font-size: 2rem;
    line-height: 2rem;
  }
}

@media (min-width:740px) {
  .c5 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:1024px) {
  .c5 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width:740px) {
  .c10 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:1024px) {
  .c10 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width:740px) {
  .c18 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:1024px) {
  .c18 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width:740px) {
  .c22 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:1024px) {
  .c22 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width:740px) {

}

@media (min-width:1024px) {

}

@media (min-width:740px) {
  .c1 {
    padding: 4rem 1rem;
  }
}

@media (min-width:1024px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    padding: 4rem 0;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:1024px) {
  .c2 {
    width: 50%;
    padding: 4rem;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:1024px) {
  .c6 {
    width: 50%;
  }
}

@media (min-width:740px) {
  .c7 {
    width: 450px;
    margin-right: auto;
    margin-left: auto;
  }
}

@media (min-width:740px) {
  .c8 {
    padding: 0 2rem 2rem;
  }
}

@media (min-width:740px) {
  .c21 {
    -webkit-flex-basis: 60%;
    -ms-flex-preferred-size: 60%;
    flex-basis: 60%;
  }
}

@media (min-width:740px) {
  .c29 {
    padding: 1rem 2rem;
  }
}

@media (min-width:740px) {
  .c13 {
    margin: 0 auto;
  }
}

<div
  className="c0"
  id="mbship-1"
>
  <div
    aria-live="polite"
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <h2
          className="c4"
        >
          Donate Now
        </h2>
        <p
          className="c5"
        >
          Please help us fund life-changing projects in the UK and around the world.
        </p>
      </div>
    </div>
    <div
      className="c6"
    >
      <form
        className="c7"
        onSubmit={[Function]}
      >
        <fieldset
          className="c8"
        >
          <legend
            className="c9"
          >
            <span
              className="c10 c11"
            >
              Choose an amount to give
            </span>
          </legend>
          <div
            className="c12"
          >
            <div
              className="c13"
            >
              <input
                aria-label="Single"
                checked={false}
                className="give-once"
                id="give-once--mbship-1"
                label=""
                onChange={[Function]}
                type="radio"
                value="Single"
              />
              <label
                className="c14"
                htmlFor="give-once--mbship-1"
              >
                Single
              </label>
              <input
                aria-label="Monthly"
                checked={false}
                className="give-monthly"
                id="give-monthly--mbship-1"
                label=""
                onChange={[Function]}
                type="radio"
                value="Monthly"
              />
              <label
                className="c14"
                htmlFor="give-monthly--mbship-1"
              >
                Monthly
              </label>
              <span
                className="c15 c16"
              />
            </div>
          </div>
          <div
            className="c17"
          >
            <span
              className="c18 c19"
            >
              Enter another amount
            </span>
            <label
              className="c20 c21"
              htmlFor="mbship-1--MoneyBuy-userInput"
            >
              <span
                className="c22 c23"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "Other donation amount",
                  }
                }
              />
              <div
                className="c24"
              >
                <div
                  className="c25"
                >
                  £
                </div>
                <div
                  className="c26"
                >
                  <input
                    aria-required={false}
                    className="c27"
                    id="mbship-1--MoneyBuy-userInput"
                    max="25000"
                    min="1"
                    name="membership_amount"
                    onChange={[Function]}
                    pattern="^[0-9]+([,.][0-9]{0,2})?$"
                    placeholder="0.00"
                    required={false}
                    step="0.01"
                    type="string"
                    value={10}
                  />
                  
                </div>
              </div>
              
            </label>
          </div>
          <p
            className="c10 c28"
          >
            <strong>
              £10 
            </strong>
          </p>
          <button
            className="c29 Button_DonateWidget"
            color="red"
            type="submit"
          >
            Donate £10 monthly
          </button>
        </fieldset>
      </form>
    </div>
  </div>
</div>
`;

exports[`Single donation renders correctly 1`] = `
.c4 {
  font-family: 'Anton',Impact,sans-serif;
  font-weight: 400;
  text-transform: uppercase;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-size: 1.5rem;
  line-height: 1.5rem;
}

.c4 {
  font-size: 4rem;
  line-height: normal;
  font-family: 'Anton',Impact,sans-serif;
  font-weight: normal;
  color: #FFFFFF;
}

.c4 span {
  font-size: inherit;
  line-height: inherit;
}

.c5 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c5 {
  font-size: 1.25rem;
  line-height: normal;
  color: #FFFFFF;
}

.c5 span {
  font-size: inherit;
  line-height: inherit;
}

.c10 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c10 {
  color: #FFFFFF;
}

.c10 span {
  font-size: inherit;
  line-height: inherit;
}

.c22 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c22 {
  font-size: 1rem;
  line-height: normal;
  font-weight: 500;
  color: #FFFFFF;
}

.c22 span {
  font-size: inherit;
  line-height: inherit;
}

.c15 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c15 span {
  font-size: inherit;
  line-height: inherit;
}

.c13 {
  width: 100%;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  color: #000000;
}

.c16 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c17 {
  position: relative;
  font-size: 1.25rem;
}

.c18 {
  position: relative;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c26 {
  position: relative;
  box-sizing: border-box;
  width: 100%;
  height: 48px;
  padding: 1rem 2.4rem 1rem 1.5rem;
  padding-left: calc(1.5rem + (1 * 0.5rem));
  background-color: #F4F3F5;
  border: 1px solid;
  border-color: #969598;
  box-shadow: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #000000;
  border-radius: 0.5rem;
  font-size: inherit;
  z-index: 2;
  font-family: inherit;
}

.c26:focus {
  border: 1px solid #666;
}

.c19 {
  position: relative;
  box-sizing: border-box;
  width: 100%;
  height: 48px;
  padding: 1rem 2.4rem 1rem 1.5rem;
  background-color: #F4F3F5;
  border: 1px solid;
  border-color: #969598;
  box-shadow: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #000000;
  border-radius: 0.5rem;
  font-size: inherit;
  z-index: 2;
  font-family: inherit;
}

.c19:focus {
  border: 1px solid #666;
}

.c25 {
  position: absolute;
  left: 0;
  top: 0;
  z-index: 3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: calc(1.5rem + (1 * 0.5rem));
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #222222;
  font-weight: 700;
  font-size: inherit;
  margin-left: 2px;
}

.c14 {
  display: block;
}

.c14 input {
  border: none;
  background-color: #FFFFFF;
  color: #000000;
  font-size: 1.5rem;
  font-family: 'Anton',Impact,sans-serif;
  font-weight: normal;
  border-radius: 0.5rem;
  height: 4rem;
  border: 1px solid #969598;
}

.c14 input:focus {
  border: 1px solid #E52630;
}

.c20 {
  display: block;
}

.c20 input {
  border: none;
  background-color: #FFFFFF;
  color: #000000;
  font-size: 1.5rem;
  font-family: 'Anton',Impact,sans-serif;
  font-weight: normal;
  border-radius: 0.5rem;
  height: 4rem;
  border: 1px solid #969598;
  background-color: #E52630;
  border: 1px solid #E52630;
  color: #FFFFFF;
}

.c20 input:focus {
  border: 1px solid #E52630;
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: auto;
  padding: 2rem 0 2rem;
  background-color: #F4F3F5;
}

.c1 {
  position: relative;
  text-align: center;
  padding: 2rem 1rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: block;
  width: 100%;
}

.c2 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  padding-bottom: 2rem;
}

.c3 {
  position: relative;
  text-align: left;
}

.c6 {
  position: relative;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c7 {
  position: relative;
  width: 100%;
  background-color: #FFFFFF;
  box-shadow: 0px 0px 16px rgba(0,0,0,0.15);
  border-radius: 0.5rem;
  margin-top: 1rem;
}

.c7 h3 {
  margin-top: 1rem;
}

.c7 input {
  max-width: 100%;
  margin: 0;
}

.c7 input[type='submit'] {
  margin: 2rem 0;
}

.c8 {
  color: #000000;
  padding: 0 1rem 1rem;
  margin: 0;
  border: none;
}

.c8 input[type='submit'] {
  margin-bottom: 0;
}

.c9 {
  margin: 0;
  padding: 2rem 0.5rem 0 0.5rem;
  display: block;
  width: 100%;
}

.c11 {
  display: block;
  text-align: left;
  font-size: 1rem;
  font-weight: 700;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 1rem;
}

.c12 label {
  -webkit-flex: 0 0 31%;
  -ms-flex: 0 0 31%;
  flex: 0 0 31%;
  margin-bottom: 0.5rem;
}

.c12 label input {
  cursor: pointer;
  padding: 0.5rem 1.5rem;
}

.c21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c23 {
  margin-bottom: 0.5rem;
}

.c24 {
  position: relative;
  -webkit-flex-basis: 50%;
  -ms-flex-preferred-size: 50%;
  flex-basis: 50%;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  font-weight: 400;
  display: block;
}

.c24 span {
  position: absolute;
  font-size: 20px;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  left: 0px;
  font-weight: 500;
  padding: 0px 15px;
  z-index: 3;
}

.c24 input {
  height: 48px;
  border: 1px solid #969598;
  background: #F4F3F5;
  border-radius: 0.5rem;
  padding: 0.5rem 1rem 0.5rem 2rem;
}

.c24 input:focus {
  outline: none;
  border: 1px solid #969598;
}

.c27 {
  line-height: 1.5;
  margin-top: 2rem;
}

.c28 {
  width: 100%;
  margin: 0.5rem 0 0.5rem;
  color: #FFFFFF;
  font-size: 1rem;
  font-weight: bold;
  cursor: pointer;
  min-height: 48px;
  background: #E52630;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 0.5rem;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c28:active,
.c28:focus,
.c28:hover {
  outline: none;
  background-color: #961D35;
}

@media (min-width:740px) {
  .c4 {
    font-size: 1.875rem;
    line-height: 1.875rem;
  }
}

@media (min-width:1024px) {
  .c4 {
    font-size: 2rem;
    line-height: 2rem;
  }
}

@media (min-width:740px) {
  .c5 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:1024px) {
  .c5 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width:740px) {
  .c10 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:1024px) {
  .c10 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width:740px) {
  .c22 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:1024px) {
  .c22 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width:740px) {
  .c15 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:1024px) {
  .c15 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width:740px) {

}

@media (min-width:1024px) {

}

@media (min-width:740px) {
  .c1 {
    padding: 4rem 1rem;
  }
}

@media (min-width:1024px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    padding: 4rem 0;
    -webkit-flex-direction: row-reverse;
    -ms-flex-direction: row-reverse;
    flex-direction: row-reverse;
  }
}

@media (min-width:740px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {
  .c2 {
    width: 50%;
    padding: 4rem;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:1024px) {
  .c6 {
    width: 50%;
  }
}

@media (min-width:740px) {
  .c7 {
    width: 450px;
    margin-right: auto;
    margin-left: auto;
  }
}

@media (min-width:740px) {
  .c8 {
    padding: 0 2rem 2rem;
  }
}

@media (min-width:740px) {
  .c12 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    margin-top: 1.5rem;
  }
}

@media (min-width:740px) {
  .c12 label {
    margin-bottom: 0;
  }
}

@media (min-width:740px) {
  .c24 {
    -webkit-flex-basis: 60%;
    -ms-flex-preferred-size: 60%;
    flex-basis: 60%;
  }
}

@media (min-width:740px) {
  .c28 {
    padding: 1rem 2rem;
  }
}

@media (min-width:740px) {

}

<div
  className="c0"
  id="mbship-1"
>
  <div
    aria-live="polite"
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <h2
          className="c4"
        >
          Donate Now
        </h2>
        <p
          className="c5"
        >
          Please help us fund life-changing projects in the UK and around the world.
        </p>
      </div>
    </div>
    <div
      className="c6"
    >
      <form
        className="c7"
        onSubmit={[Function]}
      >
        <fieldset
          className="c8"
        >
          <legend
            className="c9"
          >
            <span
              className="c10 c11"
            >
              Choose an amount to give
            </span>
          </legend>
          <div
            className="c12"
          >
            <label
              className="c13 c14"
              htmlFor="mbship-1--moneyBuy-box1"
            >
              <span
                className="c15 c16"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "£10",
                  }
                }
              />
              <div
                className="c17"
              >
                
                <div
                  className="c18"
                >
                  <input
                    aria-required={false}
                    className="c19"
                    id="mbship-1--moneyBuy-box1"
                    name="mbship-1--moneyBuy1"
                    onClick={[Function]}
                    placeholder=""
                    required={false}
                    type="button"
                    value="£ 10"
                  />
                  
                </div>
              </div>
              
            </label>
            <label
              className="c13 c20"
              htmlFor="mbship-1--moneyBuy-box2"
            >
              <span
                className="c15 c16"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "£20",
                  }
                }
              />
              <div
                className="c17"
              >
                
                <div
                  className="c18"
                >
                  <input
                    aria-required={false}
                    className="c19"
                    id="mbship-1--moneyBuy-box2"
                    name="mbship-1--moneyBuy2"
                    onClick={[Function]}
                    placeholder=""
                    required={false}
                    type="button"
                    value="£ 20"
                  />
                  
                </div>
              </div>
              
            </label>
            <label
              className="c13 c14"
              htmlFor="mbship-1--moneyBuy-box3"
            >
              <span
                className="c15 c16"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "£30",
                  }
                }
              />
              <div
                className="c17"
              >
                
                <div
                  className="c18"
                >
                  <input
                    aria-required={false}
                    className="c19"
                    id="mbship-1--moneyBuy-box3"
                    name="mbship-1--moneyBuy3"
                    onClick={[Function]}
                    placeholder=""
                    required={false}
                    type="button"
                    value="£ 30"
                  />
                  
                </div>
              </div>
              
            </label>
          </div>
          <div
            className="c21"
          >
            <span
              className="c22 c23"
            >
              Enter another amount
            </span>
            <label
              className="c13 c24"
              htmlFor="mbship-1--MoneyBuy-userInput"
            >
              <span
                className="c15 c16"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "Other donation amount",
                  }
                }
              />
              <div
                className="c17"
              >
                <div
                  className="c25"
                >
                  £
                </div>
                <div
                  className="c18"
                >
                  <input
                    aria-required={false}
                    className="c26"
                    id="mbship-1--MoneyBuy-userInput"
                    max="25000"
                    min="1"
                    name="membership_amount"
                    onChange={[Function]}
                    pattern="^[0-9]+([,.][0-9]{0,2})?$"
                    placeholder="0.00"
                    required={false}
                    step="0.01"
                    type="string"
                    value={20}
                  />
                  
                </div>
              </div>
              
            </label>
          </div>
          <p
            className="c10 c27"
          >
            <strong>
              £20 
            </strong>
            a support worker to visit 10 isolated young mums with postnatal depression in the UK.
          </p>
          <button
            className="c28 Button_DonateWidget"
            color="red"
            type="submit"
          >
            Donate £20 now
          </button>
        </fieldset>
      </form>
    </div>
  </div>
</div>
`;

exports[`Single donation with no Money Buys renders correctly 1`] = `
.c4 {
  font-family: 'Anton',Impact,sans-serif;
  font-weight: 400;
  text-transform: uppercase;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-size: 1.5rem;
  line-height: 1.5rem;
}

.c4 {
  font-size: 4rem;
  line-height: normal;
  font-family: 'Anton',Impact,sans-serif;
  font-weight: normal;
  color: #FFFFFF;
}

.c4 span {
  font-size: inherit;
  line-height: inherit;
}

.c5 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c5 {
  font-size: 1.25rem;
  line-height: normal;
  color: #FFFFFF;
}

.c5 span {
  font-size: inherit;
  line-height: inherit;
}

.c10 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c10 {
  color: #FFFFFF;
}

.c10 span {
  font-size: inherit;
  line-height: inherit;
}

.c15 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c15 span {
  font-size: inherit;
  line-height: inherit;
}

.c13 {
  width: 100%;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  color: #000000;
}

.c16 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c17 {
  position: relative;
  font-size: 1.25rem;
}

.c19 {
  position: relative;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c20 {
  position: relative;
  box-sizing: border-box;
  width: 100%;
  height: 48px;
  padding: 1rem 2.4rem 1rem 1.5rem;
  padding-left: calc(1.5rem + (1 * 0.5rem));
  background-color: #F4F3F5;
  border: 1px solid;
  border-color: #969598;
  box-shadow: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #000000;
  border-radius: 0.5rem;
  font-size: inherit;
  z-index: 2;
  font-family: inherit;
}

.c20:focus {
  border: 1px solid #666;
}

.c18 {
  position: absolute;
  left: 0;
  top: 0;
  z-index: 3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: calc(1.5rem + (1 * 0.5rem));
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #222222;
  font-weight: 700;
  font-size: inherit;
  margin-left: 2px;
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: auto;
  padding: 0rem 0 0rem;
  background-color: #F4F3F5;
}

.c1 {
  position: relative;
  text-align: center;
  padding: 2rem 1rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: block;
  width: 100%;
}

.c2 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  padding-bottom: 2rem;
}

.c3 {
  position: relative;
  text-align: left;
}

.c6 {
  position: relative;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c7 {
  position: relative;
  width: 100%;
  background-color: #FFFFFF;
  box-shadow: 0px 0px 16px rgba(0,0,0,0.15);
  border-radius: 0.5rem;
  margin-top: 1rem;
}

.c7 h3 {
  margin-top: 1rem;
}

.c7 input {
  max-width: 100%;
  margin: 0;
}

.c7 input[type='submit'] {
  margin: 2rem 0;
}

.c8 {
  color: #000000;
  padding: 0 1rem 1rem;
  margin: 0;
  border: none;
}

.c8 input[type='submit'] {
  margin-bottom: 0;
}

.c9 {
  margin: 0;
  padding: 2rem 0.5rem 0 0.5rem;
  display: block;
  width: 100%;
}

.c11 {
  display: block;
  text-align: left;
  font-size: 1rem;
  font-weight: 700;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c14 {
  position: relative;
  -webkit-flex-basis: 50%;
  -ms-flex-preferred-size: 50%;
  flex-basis: 50%;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  font-weight: 400;
  display: block;
  margin-top: 0.5rem;
}

.c14 span {
  position: absolute;
  font-size: 20px;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  left: 0px;
  font-weight: 500;
  padding: 0px 15px;
  z-index: 3;
}

.c14 input {
  height: 48px;
  border: 1px solid #969598;
  background: #F4F3F5;
  border-radius: 0.5rem;
  padding: 0.5rem 1rem 0.5rem 2rem;
}

.c14 input:focus {
  outline: none;
  border: 1px solid #969598;
}

.c21 {
  line-height: 1.5;
  margin-top: 2rem;
}

.c22 {
  width: 100%;
  margin: 0.5rem 0 0.5rem;
  color: #FFFFFF;
  font-size: 1rem;
  font-weight: bold;
  cursor: pointer;
  min-height: 48px;
  background: #E52630;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 0.5rem;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c22:active,
.c22:focus,
.c22:hover {
  outline: none;
  background-color: #961D35;
}

@media (min-width:740px) {
  .c4 {
    font-size: 1.875rem;
    line-height: 1.875rem;
  }
}

@media (min-width:1024px) {
  .c4 {
    font-size: 2rem;
    line-height: 2rem;
  }
}

@media (min-width:740px) {
  .c5 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:1024px) {
  .c5 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width:740px) {
  .c10 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:1024px) {
  .c10 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width:740px) {
  .c15 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:1024px) {
  .c15 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width:740px) {

}

@media (min-width:1024px) {

}

@media (min-width:740px) {
  .c1 {
    padding: 4rem 1rem;
  }
}

@media (min-width:1024px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    padding: 4rem 0;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:1024px) {
  .c2 {
    width: 50%;
    padding: 4rem;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:1024px) {
  .c6 {
    width: 50%;
  }
}

@media (min-width:740px) {
  .c7 {
    width: 450px;
    margin-right: auto;
    margin-left: auto;
  }
}

@media (min-width:740px) {
  .c8 {
    padding: 0 2rem 2rem;
  }
}

@media (min-width:740px) {
  .c14 {
    -webkit-flex-basis: 60%;
    -ms-flex-preferred-size: 60%;
    flex-basis: 60%;
  }
}

@media (min-width:740px) {
  .c22 {
    padding: 1rem 2rem;
  }
}

<div
  className="c0"
  id="mbship-1"
>
  <div
    aria-live="polite"
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <h2
          className="c4"
        >
          Donate Now
        </h2>
        <p
          className="c5"
        >
          Please help us fund life-changing projects in the UK and around the world.
        </p>
      </div>
    </div>
    <div
      className="c6"
    >
      <form
        className="c7"
        onSubmit={[Function]}
      >
        <fieldset
          className="c8"
        >
          <legend
            className="c9"
          >
            <span
              className="c10 c11"
            >
              Overridden choose amount text
            </span>
          </legend>
          <div
            className="c12"
          >
            <label
              className="c13 c14"
              htmlFor="mbship-1--MoneyBuy-userInput"
            >
              <span
                className="c15 c16"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "Donation amount",
                  }
                }
              />
              <div
                className="c17"
              >
                <div
                  className="c18"
                >
                  £
                </div>
                <div
                  className="c19"
                >
                  <input
                    aria-required={false}
                    className="c20"
                    id="mbship-1--MoneyBuy-userInput"
                    max="25000"
                    min="1"
                    name="membership_amount"
                    onChange={[Function]}
                    pattern="^[0-9]+([,.][0-9]{0,2})?$"
                    placeholder="0.00"
                    required={false}
                    step="0.01"
                    type="string"
                    value={10}
                  />
                  
                </div>
              </div>
              
            </label>
          </div>
          <p
            className="c10 c21"
          >
            <strong>
              £10 
            </strong>
          </p>
          <button
            className="c22 Button_DonateWidget"
            color="red"
            type="submit"
          >
            Donate £10 monthly
          </button>
        </fieldset>
      </form>
    </div>
  </div>
</div>
`;

exports[`Text-only donate widget renders correctly 1`] = `
.c4 {
  font-family: 'Anton',Impact,sans-serif;
  font-weight: 400;
  text-transform: uppercase;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-size: 1.5rem;
  line-height: 1.5rem;
}

.c4 {
  font-size: 4rem;
  line-height: normal;
  font-family: 'Anton',Impact,sans-serif;
  font-weight: normal;
  color: #FFFFFF;
}

.c4 span {
  font-size: inherit;
  line-height: inherit;
}

.c5 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c5 {
  font-size: 1.25rem;
  line-height: normal;
  color: #FFFFFF;
}

.c5 span {
  font-size: inherit;
  line-height: inherit;
}

.c10 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c10 {
  color: #FFFFFF;
}

.c10 span {
  font-size: inherit;
  line-height: inherit;
}

.c21 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c21 span {
  font-size: inherit;
  line-height: inherit;
}

.c19 {
  width: 100%;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  color: #000000;
}

.c22 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c23 {
  position: relative;
  font-size: 1.25rem;
}

.c25 {
  position: relative;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c26 {
  position: relative;
  box-sizing: border-box;
  width: 100%;
  height: 48px;
  padding: 1rem 2.4rem 1rem 1.5rem;
  padding-left: calc(1.5rem + (1 * 0.5rem));
  background-color: #F4F3F5;
  border: 1px solid;
  border-color: #969598;
  box-shadow: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #000000;
  border-radius: 0.5rem;
  font-size: inherit;
  z-index: 2;
  font-family: inherit;
}

.c26:focus {
  border: 1px solid #666;
}

.c24 {
  position: absolute;
  left: 0;
  top: 0;
  z-index: 3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: calc(1.5rem + (1 * 0.5rem));
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #222222;
  font-weight: 700;
  font-size: inherit;
  margin-left: 2px;
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: auto;
  padding: 2rem 0 2rem;
  background-color: #F4F3F5;
}

.c1 {
  position: relative;
  text-align: center;
  padding: 2rem 1rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: block;
  width: 100%;
}

.c2 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  padding-bottom: 2rem;
}

.c3 {
  position: relative;
  text-align: left;
}

.c6 {
  position: relative;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c7 {
  position: relative;
  width: 100%;
  background-color: #2C0230;
  box-shadow: 0px 0px 16px rgba(0,0,0,0.15);
  border-radius: 0.5rem;
  margin-top: 1rem;
}

.c7 h3 {
  margin-top: 1rem;
}

.c7 input {
  max-width: 100%;
  margin: 0;
}

.c7 input[type='submit'] {
  margin: 2rem 0;
}

.c8 {
  color: #000000;
  padding: 0 1rem 1rem;
  margin: 0;
  border: none;
}

.c8 input[type='submit'] {
  margin-bottom: 0;
}

.c9 {
  margin: 0;
  padding: 2rem 0.5rem 0 0.5rem;
  display: block;
  width: 100%;
}

.c11 {
  display: block;
  text-align: left;
  font-size: 1rem;
  font-weight: 700;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c20 {
  position: relative;
  -webkit-flex-basis: 50%;
  -ms-flex-preferred-size: 50%;
  flex-basis: 50%;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  font-weight: 400;
  display: block;
  margin-top: 0.5rem;
}

.c20 span {
  position: absolute;
  font-size: 20px;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  left: 0px;
  font-weight: 500;
  padding: 0px 15px;
  z-index: 3;
}

.c20 input {
  height: 48px;
  border: 1px solid #969598;
  background: #F4F3F5;
  border-radius: 0.5rem;
  padding: 0.5rem 1rem 0.5rem 2rem;
}

.c20 input:focus {
  outline: none;
  border: 1px solid #969598;
}

.c27 {
  line-height: 1.5;
  margin-top: 2rem;
}

.c28 {
  width: 100%;
  margin: 0.5rem 0 0.5rem;
  color: #FFFFFF;
  font-size: 1rem;
  font-weight: bold;
  cursor: pointer;
  min-height: 48px;
  background: #E52630;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 0.5rem;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c28:active,
.c28:focus,
.c28:hover {
  outline: none;
  background-color: #961D35;
}

.c17 {
  width: 50%;
  height: 48px;
  z-index: 1;
  display: block;
  position: absolute;
  -webkit-transition: left 0.15s ease-out;
  transition: left 0.15s ease-out;
  background-color: #E52630;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 1rem 0;
}

.c13 {
  width: 100%;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin: 0.5rem 0;
  overflow: hidden;
  border-radius: 0.5rem;
  border: 1px solid #969598;
  background: #FFFFFF;
}

.c13 .give-monthly:checked ~ .c16 {
  left: calc(50%);
}

.c13 input {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c15 {
  font-size: 1rem;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: bold;
  min-height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-basis: 50%;
  -ms-flex-preferred-size: 50%;
  flex-basis: 50%;
  border: none;
  -webkit-transition: color 0.15s ease-out;
  transition: color 0.15s ease-out;
  z-index: 2;
  cursor: pointer;
  border-radius: 2rem;
  color: #000000;
}

.c15:active:focus {
  box-shadow: none;
}

.c15:focus {
  border: none;
  outline: none;
  box-shadow: inset 0 0 0 4px #E52630;
}

.c14 {
  font-size: 1rem;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: bold;
  min-height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-basis: 50%;
  -ms-flex-preferred-size: 50%;
  flex-basis: 50%;
  border: none;
  -webkit-transition: color 0.15s ease-out;
  transition: color 0.15s ease-out;
  z-index: 2;
  cursor: default;
  border-radius: 2rem;
  color: #FFFFFF;
}

.c14:active:focus {
  box-shadow: none;
}

.c14:focus {
  border: none;
  outline: none;
  box-shadow: inset 0 0 0 4px #E52630;
}

@media (min-width:740px) {
  .c4 {
    font-size: 1.875rem;
    line-height: 1.875rem;
  }
}

@media (min-width:1024px) {
  .c4 {
    font-size: 2rem;
    line-height: 2rem;
  }
}

@media (min-width:740px) {
  .c5 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:1024px) {
  .c5 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width:740px) {
  .c10 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:1024px) {
  .c10 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width:740px) {
  .c21 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:1024px) {
  .c21 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width:740px) {

}

@media (min-width:1024px) {

}

@media (min-width:740px) {
  .c1 {
    padding: 4rem 1rem;
  }
}

@media (min-width:1024px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    padding: 4rem 0;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:1024px) {
  .c2 {
    width: 50%;
    padding: 4rem;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:1024px) {
  .c6 {
    width: 50%;
  }
}

@media (min-width:740px) {
  .c7 {
    width: 450px;
    margin-right: auto;
    margin-left: auto;
  }
}

@media (min-width:740px) {

}

@media (min-width:740px) {
  .c8 {
    padding: 0 2rem 2rem;
  }
}

@media (min-width:740px) {
  .c20 {
    -webkit-flex-basis: 60%;
    -ms-flex-preferred-size: 60%;
    flex-basis: 60%;
  }
}

@media (min-width:740px) {
  .c28 {
    padding: 1rem 2rem;
  }
}

@media (min-width:740px) {
  .c13 {
    margin: 0 auto;
  }
}

<div
  className="c0"
  id="mbship-4"
>
  <div
    aria-live="polite"
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <h2
          className="c4"
        >
          Donate Now
        </h2>
        <p
          className="c5"
        >
          Please help us fund life-changing projects in the UK and around the world.
        </p>
      </div>
    </div>
    <div
      className="c6"
    >
      <form
        className="c7"
        onSubmit={[Function]}
      >
        <fieldset
          className="c8"
        >
          <legend
            className="c9"
          >
            <span
              className="c10 c11"
            >
              Enter an amount to give
            </span>
          </legend>
          <div
            className="c12"
          >
            <div
              className="c13"
            >
              <input
                aria-label="Single"
                checked={true}
                className="give-once"
                id="give-once--mbship-4"
                label=""
                onChange={[Function]}
                type="radio"
                value="Single"
              />
              <label
                className="c14"
                htmlFor="give-once--mbship-4"
              >
                Single
              </label>
              <input
                aria-label="Monthly"
                checked={false}
                className="give-monthly"
                id="give-monthly--mbship-4"
                label=""
                onChange={[Function]}
                type="radio"
                value="Monthly"
              />
              <label
                className="c15"
                htmlFor="give-monthly--mbship-4"
              >
                Monthly
              </label>
              <span
                className="c16 c17"
              />
            </div>
          </div>
          <div
            className="c18"
          >
            <label
              className="c19 c20"
              htmlFor="mbship-4--MoneyBuy-userInput"
            >
              <span
                className="c21 c22"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "Donation amount",
                  }
                }
              />
              <div
                className="c23"
              >
                <div
                  className="c24"
                >
                  £
                </div>
                <div
                  className="c25"
                >
                  <input
                    aria-required={false}
                    className="c26"
                    id="mbship-4--MoneyBuy-userInput"
                    max="25000"
                    min="1"
                    name="membership_amount"
                    onChange={[Function]}
                    pattern="^[0-9]+([,.][0-9]{0,2})?$"
                    placeholder="0.00"
                    required={false}
                    step="0.01"
                    type="string"
                    value="50"
                  />
                  
                </div>
              </div>
              
            </label>
          </div>
          <p
            className="c10 c27"
          >
            <strong>
              £50 
            </strong>
            will help us fund amazing projects in the UK and around the world.
          </p>
          <button
            className="c28 Button_DonateWidget"
            color="red"
            type="submit"
          >
            Donate £50 now
          </button>
        </fieldset>
      </form>
    </div>
  </div>
</div>
`;
